# MasterThesis

./: README.md
code/rust/: Cargo.toml
code/rust/src/: lib.rs  main.rs
code/rust/src/griffin/: mod.rs  p128_t12_c4_s100.rs  p128_t20_c4_s100.rs  p128_t36_c4_s100.rs  p128_t4_c2_s128.rs  p128_t4_c3_s128.rs  p128_t68_c4_s100.rs  p62_t12_c4_s100.rs  p62_t20_c4_s100.rs  p62_t36_c4_s100.rs  p62_t4_c2_s128.rs  p62_t4_c3_s128.rs  p62_t68_c4_s100.rs  template.rs
code/rust/src/rescue/: mod.rs  p128_m17_c1_s128.rs  p128_m33_c1_s128.rs  p128_m4_c2_s128.rs  p128_m4_c3_s128.rs  p128_m65_c1_s128.rs  p128_m9_c1_s128.rs  p62_m17_c1_s128.rs  p62_m33_c1_s128.rs  p62_m4_c2_s128.rs  p62_m4_c3_s128.rs  p62_m65_c1_s128.rs  p62_m9_c1_s128.rs  p64_m9_c1_s128.rs  template.rs
code/rust/src/stark/: mod.rs  stark_a.rs  stark_a_62.rs  stark_a_griffin.rs  stark_a_griffin_62.rs  stark_b.rs  stark_b_62.rs  stark_b_griffin.rs  stark_b_griffin_62.rs  stark_c.rs  stark_c_griffin.rs  stark_d.rs  stark_d_griffin.rs  stark_e.rs  stark_e_62.rs  stark_e_griffin.rs  stark_e_griffin_62.rs  stark_e_opt.rs  stark_e_opt_62.rs  stark_e_opt_griffin.rs  stark_e_opt_griffin_62.rs  stark_f.rs  stark_f_62.rs  stark_f_64.rs  stark_f_griffin.rs  stark_f_griffin_62.rs  stark_f_opt_m2.rs  stark_f_opt_m2_62.rs  stark_f_opt_m2_griffin.rs  stark_f_opt_m2_griffin_62.rs  stark_f_opt_m4.rs  stark_f_opt_m4_62.rs  stark_f_opt_m4_griffin.rs  stark_f_opt_m4_griffin_62.rs  stark_f_opt_m8.rs  stark_f_opt_m8_62.rs  stark_f_opt_m8_griffin.rs  stark_f_opt_m8_griffin_62.rs  stark_g.rs  stark_g_62.rs  (+2 more)
code/rust/src/utils/: mod.rs
