[package]
name = "master_thesis"
version = "0.1.0"
edition = "2021"
authors = ["Roman Markus Holler"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "master_thesis"
path = "src/main.rs"

[lib]
name = "master_thesis"
path = "src/lib.rs"

[dependencies]
winterfell = { version = "0.3.0", default-features = false }
rounded-div = "0.1.2"
rand = "0.8.4"
min-max = "0.1"
clap = { version = "3.1.6", features = ["derive"] }
lazy_static = "1.4.0"
log = "0.4.14"
env_logger = "0.9.0"
hex = { version = "0.4", optional = true }
winter-rand-utils = { version = "0.3.0", optional = true }

[features]
concurrent = ["winterfell/concurrent", "std"]
default = ["std"]
std = ["hex/std", "winterfell/std", "winter-rand-utils"]

master_thesis_full = []
master_thesis_half = []
master_thesis_quarter = []
master_thesis_test = []

